# architecture

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/: 01_introduction_and_goals.md  05_building_block_view.md  12_glossary.md  about-arc42.md  index.md
